--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,6 +94,7 @@ dependencies {
     implementation 'io.coil-kt:coil-compose:2.2.2'
 
     implementation "io.noties.markwon:core:4.6.2"
+    implementation 'io.noties.markwon:image:4.6.2'
     implementation 'io.noties.markwon:image-picasso:4.6.2'
     implementation "io.noties.markwon:html:4.6.2"
     implementation "io.noties.markwon:editor:4.6.2"
@@ -101,6 +102,8 @@ dependencies {
     implementation "io.noties.markwon:ext-strikethrough:4.6.2"
     implementation "io.noties.markwon:inline-parser:4.6.2"
     implementation "io.noties.markwon:linkify:4.6.2"
+    implementation 'com.caverock:androidsvg-aar:1.4'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.25'
 
     implementation platform('com.google.firebase:firebase-bom:31.1.1')
     implementation 'com.google.firebase:firebase-analytics-ktx'
