--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -48,7 +48,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.1.1'
+        kotlinCompilerExtensionVersion '1.4.1'
     }
     packagingOptions {
         resources {
@@ -59,39 +59,35 @@ android {
 
 dependencies {
     implementation 'com.google.accompanist:accompanist-systemuicontroller:0.28.0'
-    implementation 'com.google.accompanist:accompanist-navigation-animation:0.24.9-beta'
     implementation 'com.google.accompanist:accompanist-pager:0.24.9-beta'
-    implementation "com.google.accompanist:accompanist-insets:0.29.0-alpha"
 
     implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.appcompat:appcompat:1.6.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.core:core-splashscreen:1.0.0'
-
-    implementation 'androidx.compose.compiler:compiler:1.3.2'
-    implementation 'androidx.compose.ui:ui:1.3.3'
-    implementation 'androidx.compose.ui:ui-tooling-preview:1.3.3'
-    implementation 'androidx.compose.runtime:runtime:1.3.3'
-    implementation 'androidx.navigation:navigation-compose:2.5.3'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.0-alpha04'
-    implementation 'androidx.activity:activity-compose:1.6.1'
-    implementation 'androidx.hilt:hilt-navigation-compose:1.1.0-alpha01'
-
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
-    kapt 'com.google.dagger:hilt-android-compiler:2.44.2'
-    implementation 'com.google.dagger:hilt-android:2.44.2'
+
+    implementation 'androidx.compose.compiler:compiler:1.4.2'
+    implementation 'androidx.compose.ui:ui:1.3.3'
+    implementation 'androidx.navigation:navigation-compose:2.5.3'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.0-beta01'
+    implementation 'androidx.activity:activity-compose:1.6.1'
+
+    implementation 'androidx.hilt:hilt-navigation-compose:1.1.0-alpha01'
+    kapt 'com.google.dagger:hilt-android-compiler:2.45'
+    implementation 'com.google.dagger:hilt-android:2.45'
 
     implementation 'androidx.compose.material:material:1.3.1'
-    implementation 'androidx.compose.material3:material3:1.1.0-alpha04'
+    implementation 'androidx.compose.material3:material3:1.1.0-alpha06'
     implementation 'androidx.compose.material:material-icons-core:1.3.1'
     implementation 'androidx.compose.material:material-icons-extended:1.3.1'
-    implementation 'com.google.code.gson:gson:2.9.1'
 
+    implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
     implementation 'com.squareup.picasso:picasso:2.8'
     implementation 'com.squareup.picasso3:picasso-compose:3.0.0-alpha03'
-    implementation 'com.google.android.gms:play-services-auth:20.4.1'
-    implementation 'io.coil-kt:coil-compose:2.2.2'
+    implementation "com.github.CanHub:Android-Image-Cropper:4.0.0"
     implementation "com.github.skydoves:colorpicker-compose:1.0.1"
 
     implementation "io.noties.markwon:core:4.6.2"
@@ -106,7 +102,7 @@ dependencies {
     implementation 'com.caverock:androidsvg-aar:1.4'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.25'
 
-    implementation platform('com.google.firebase:firebase-bom:31.1.1')
+    implementation platform('com.google.firebase:firebase-bom:31.2.1')
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
     implementation 'com.google.firebase:firebase-auth-ktx'
@@ -114,6 +110,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging-ktx'
     implementation 'com.google.firebase:firebase-core:21.1.1'
     implementation 'com.google.firebase:firebase-auth:21.1.0'
+    implementation 'com.google.android.gms:play-services-auth:20.4.1'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
@@ -121,5 +118,4 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.3.3"
     debugImplementation "androidx.compose.ui:ui-tooling:1.3.3"
     debugImplementation "androidx.compose.ui:ui-test-manifest:1.3.3"
-    implementation("com.github.CanHub:Android-Image-Cropper:4.0.0")
 }
