--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,10 @@ dependencies {
     kapt 'com.google.dagger:hilt-android-compiler:2.45'
     implementation 'com.google.dagger:hilt-android:2.45'
 
+    implementation "androidx.room:room-runtime:2.3.0"
+    kapt "androidx.room:room-compiler:2.3.0"
+    implementation "androidx.room:room-ktx:2.3.0"
+
     implementation 'androidx.compose.material:material:1.3.1'
     implementation 'androidx.compose.material3:material3:1.1.0-alpha06'
     implementation 'androidx.compose.material:material-icons-core:1.3.1'
