--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,22 +66,22 @@ dependencies {
     implementation 'androidx.core:core-splashscreen:1.0.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
 
-    implementation 'androidx.compose.compiler:compiler:1.4.2'
+    implementation 'androidx.compose.compiler:compiler:1.4.3'
     implementation 'androidx.compose.ui:ui:1.3.3'
     implementation 'androidx.navigation:navigation-compose:2.5.3'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.0-beta01'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.0-rc01'
     implementation 'androidx.activity:activity-compose:1.6.1'
 
     implementation 'androidx.hilt:hilt-navigation-compose:1.1.0-alpha01'
     kapt 'com.google.dagger:hilt-android-compiler:2.45'
     implementation 'com.google.dagger:hilt-android:2.45'
 
-    implementation "androidx.room:room-runtime:2.3.0"
-    kapt "androidx.room:room-compiler:2.3.0"
-    implementation "androidx.room:room-ktx:2.3.0"
+    implementation "androidx.room:room-runtime:2.5.0"
+    kapt "androidx.room:room-compiler:2.5.0"
+    implementation "androidx.room:room-ktx:2.5.0"
 
     implementation 'androidx.compose.material:material:1.3.1'
-    implementation 'androidx.compose.material3:material3:1.1.0-alpha06'
+    implementation 'androidx.compose.material3:material3:1.1.0-alpha07'
     implementation 'androidx.compose.material:material-icons-core:1.3.1'
     implementation 'androidx.compose.material:material-icons-extended:1.3.1'
 
@@ -89,7 +89,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
-    implementation 'com.squareup.picasso:picasso:2.8'
+    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.squareup.picasso3:picasso-compose:3.0.0-alpha03'
     implementation "com.github.CanHub:Android-Image-Cropper:4.0.0"
     implementation "com.github.skydoves:colorpicker-compose:1.0.1"
