--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,7 @@ dependencies {
     implementation "androidx.room:room-ktx:2.5.0"
 
     implementation 'androidx.compose.material:material:1.3.1'
+    implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.compose.material3:material3:1.1.0-alpha07'
     implementation 'androidx.compose.material:material-icons-core:1.3.1'
     implementation 'androidx.compose.material:material-icons-extended:1.3.1'
