--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,16 +61,16 @@ dependencies {
     implementation 'com.google.accompanist:accompanist-systemuicontroller:0.28.0'
     implementation 'com.google.accompanist:accompanist-pager:0.24.9-beta'
 
-    implementation 'androidx.core:core-ktx:1.10.0'
+    implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'androidx.core:core-splashscreen:1.0.0'
+    implementation 'androidx.core:core-splashscreen:1.0.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
 
-    implementation 'androidx.compose.compiler:compiler:1.4.5'
-    implementation 'androidx.compose.ui:ui:1.4.1'
+    implementation 'androidx.compose.compiler:compiler:1.4.7'
+    implementation 'androidx.compose.ui:ui:1.4.3'
     implementation 'androidx.navigation:navigation-compose:2.5.3'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1'
-    implementation 'androidx.activity:activity-compose:1.7.0'
+    implementation 'androidx.activity:activity-compose:1.7.2'
 
     implementation 'androidx.hilt:hilt-navigation-compose:1.1.0-alpha01'
     kapt 'com.google.dagger:hilt-android-compiler:2.45'
@@ -80,11 +80,11 @@ dependencies {
     kapt "androidx.room:room-compiler:2.5.1"
     implementation "androidx.room:room-ktx:2.5.1"
 
-    implementation 'androidx.compose.material:material:1.4.1'
-    implementation 'com.google.android.material:material:1.8.0'
-    implementation 'androidx.compose.material3:material3:1.1.0-beta02'
-    implementation 'androidx.compose.material:material-icons-core:1.4.1'
-    implementation 'androidx.compose.material:material-icons-extended:1.4.1'
+    implementation 'androidx.compose.material:material:1.4.3'
+    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'androidx.compose.material3:material3:1.2.0-alpha02'
+    implementation 'androidx.compose.material:material-icons-core:1.4.3'
+    implementation 'androidx.compose.material:material-icons-extended:1.4.3'
 
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -120,7 +120,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.4.1"
-    debugImplementation "androidx.compose.ui:ui-tooling:1.4.1"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:1.4.1"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.4.3"
+    debugImplementation "androidx.compose.ui:ui-tooling:1.4.3"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:1.4.3"
 }
