--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,16 +6,17 @@ plugins {
     id 'com.google.gms.google-services'
     id 'com.google.firebase.crashlytics'
     id 'kotlin-parcelize'
+    id 'com.google.devtools.ksp'
 }
 
 android {
     namespace 'com.mnnit.moticlubs'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.mnnit.moticlubs"
         minSdk 26
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -48,7 +49,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.4.1'
+        kotlinCompilerExtensionVersion '1.5.1'
     }
     packagingOptions {
         resources {
@@ -64,25 +65,25 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.core:core-splashscreen:1.0.1'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.1'
 
-    implementation 'androidx.compose.compiler:compiler:1.4.7'
+    implementation 'androidx.compose.compiler:compiler:1.5.1'
     implementation 'androidx.compose.ui:ui:1.4.3'
-    implementation 'androidx.navigation:navigation-compose:2.5.3'
+    implementation 'androidx.navigation:navigation-compose:2.6.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1'
     implementation 'androidx.activity:activity-compose:1.7.2'
 
     implementation 'androidx.hilt:hilt-navigation-compose:1.1.0-alpha01'
-    kapt 'com.google.dagger:hilt-android-compiler:2.45'
-    implementation 'com.google.dagger:hilt-android:2.45'
+    kapt 'com.google.dagger:hilt-android-compiler:2.47'
+    implementation 'com.google.dagger:hilt-android:2.47'
 
-    implementation "androidx.room:room-runtime:2.5.1"
-    kapt "androidx.room:room-compiler:2.5.1"
-    implementation "androidx.room:room-ktx:2.5.1"
+    implementation "androidx.room:room-runtime:2.5.2"
+    ksp "androidx.room:room-compiler:2.5.2"
+    implementation "androidx.room:room-ktx:2.5.2"
 
     implementation 'androidx.compose.material:material:1.4.3'
     implementation 'com.google.android.material:material:1.9.0'
-    implementation 'androidx.compose.material3:material3:1.2.0-alpha02'
+    implementation 'androidx.compose.material3:material3:1.2.0-alpha04'
     implementation 'androidx.compose.material:material-icons-core:1.4.3'
     implementation 'androidx.compose.material:material-icons-extended:1.4.3'
 
