--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,8 +67,8 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.1'
 
     implementation 'androidx.compose.compiler:compiler:1.5.1'
-    implementation 'androidx.compose.ui:ui:1.4.3'
-    implementation 'androidx.navigation:navigation-compose:2.6.0'
+    implementation 'androidx.compose.ui:ui:1.5.0'
+    implementation 'androidx.navigation:navigation-compose:2.7.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1'
     implementation 'androidx.activity:activity-compose:1.7.2'
 
@@ -80,11 +80,11 @@ dependencies {
     ksp "androidx.room:room-compiler:2.5.2"
     implementation "androidx.room:room-ktx:2.5.2"
 
-    implementation 'androidx.compose.material:material:1.4.3'
+    implementation 'androidx.compose.material:material:1.5.0'
     implementation 'com.google.android.material:material:1.9.0'
-    implementation 'androidx.compose.material3:material3:1.2.0-alpha04'
-    implementation 'androidx.compose.material:material-icons-core:1.4.3'
-    implementation 'androidx.compose.material:material-icons-extended:1.4.3'
+    implementation 'androidx.compose.material3:material3:1.1.1'
+    implementation 'androidx.compose.material:material-icons-core:1.5.0'
+    implementation 'androidx.compose.material:material-icons-extended:1.5.0'
 
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -120,7 +120,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.4.3"
-    debugImplementation "androidx.compose.ui:ui-tooling:1.4.3"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:1.4.3"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.5.0"
+    debugImplementation "androidx.compose.ui:ui-tooling:1.5.0"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:1.5.0"
 }
