--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,7 @@ dependencies {
     implementation 'androidx.compose.ui:ui:1.5.0'
     implementation 'androidx.navigation:navigation-compose:2.7.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-compose:2.7.0-alpha01'
     implementation 'androidx.activity:activity-compose:1.7.2'
 
     implementation 'androidx.hilt:hilt-navigation-compose:1.1.0-alpha01'
