--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,6 +95,7 @@ dependencies {
     implementation 'com.squareup.picasso3:picasso-compose:3.0.0-alpha03'
     implementation "com.github.CanHub:Android-Image-Cropper:4.0.0"
     implementation "com.github.skydoves:colorpicker-compose:1.0.1"
+    implementation "me.saket.telephoto:zoomable:0.5.0"
 
     implementation "io.noties.markwon:core:4.6.2"
     implementation 'io.noties.markwon:image:4.6.2'
