--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.5.1'
+        kotlinCompilerExtensionVersion '1.5.3'
     }
     packagingOptions {
         resources {
@@ -66,6 +66,8 @@ android {
         }
     }
     lint {
+        sarifReport true
+        checkDependencies true
         baseline = file("lint-baseline.xml")
     }
 }
@@ -73,17 +75,17 @@ android {
 dependencies {
     implementation 'com.google.accompanist:accompanist-systemuicontroller:0.28.0'
 
-    implementation 'androidx.core:core-ktx:1.10.1'
+    implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.core:core-splashscreen:1.0.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-collections-immutable:0.3.5'
 
-    implementation 'androidx.compose.compiler:compiler:1.5.1'
-    implementation 'androidx.compose.ui:ui:1.5.0'
-    implementation 'androidx.navigation:navigation-compose:2.7.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1'
-    implementation 'androidx.lifecycle:lifecycle-runtime-compose:2.7.0-alpha01'
+    implementation 'androidx.compose.compiler:compiler:1.5.3'
+    implementation 'androidx.compose.ui:ui:1.5.1'
+    implementation 'androidx.navigation:navigation-compose:2.7.2'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.2'
+    implementation 'androidx.lifecycle:lifecycle-runtime-compose:2.7.0-alpha02'
     implementation 'androidx.activity:activity-compose:1.7.2'
 
     implementation 'androidx.hilt:hilt-navigation-compose:1.1.0-alpha01'
@@ -94,11 +96,11 @@ dependencies {
     ksp "androidx.room:room-compiler:2.5.2"
     implementation "androidx.room:room-ktx:2.5.2"
 
-    implementation 'androidx.compose.material:material:1.5.0'
+    implementation 'androidx.compose.material:material:1.5.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.compose.material3:material3:1.1.1'
-    implementation 'androidx.compose.material:material-icons-core:1.5.0'
-    implementation 'androidx.compose.material:material-icons-extended:1.5.0'
+    implementation 'androidx.compose.material:material-icons-core:1.5.1'
+    implementation 'androidx.compose.material:material-icons-extended:1.5.1'
 
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -129,15 +131,14 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage-ktx'
     implementation 'com.google.firebase:firebase-messaging-ktx'
     implementation 'com.google.firebase:firebase-core:21.1.1'
-    implementation 'com.google.firebase:firebase-auth:21.3.0'
-    implementation 'com.google.android.gms:play-services-auth:20.5.0'
+    implementation 'com.google.android.gms:play-services-auth:20.7.0'
 
     lintChecks "com.slack.lint.compose:compose-lint-checks:1.2.0"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.5.0"
-    debugImplementation "androidx.compose.ui:ui-tooling:1.5.0"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:1.5.0"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.5.1"
+    debugImplementation "androidx.compose.ui:ui-tooling:1.5.1"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:1.5.1"
 }
