--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,20 +22,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: gradle
-    - name: Get secret
-      env:
-        JSON: ${{ secrets.JSON_PASS }}
-      run: chmod +x ./decrypt.sh && ./decrypt.sh
-    - name: Make gradlew executable
-      run: chmod +x ./gradlew
-    - name: Build with Gradle
-      run: ./gradlew :app:lintRelease :app:bundleRelease --parallel
-    - name: Remove secret
-      run: rm -rf app/google-services.json
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: gradle
+      - name: Get secret
+        env:
+          JSON: ${{ secrets.JSON_PASS }}
+        run: chmod +x ./decrypt.sh && ./decrypt.sh
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+      - name: Build with Gradle
+        run: ./gradlew :app:ktlintCheck :app:lintVitalRelease :app:bundleRelease --parallel
+      - name: Remove secret
+        run: rm -rf app/google-services.json
