--- a/.github/workflows/gradle-pr.yml
+++ b/.github/workflows/gradle-pr.yml
@@ -8,7 +8,7 @@
 name: Android Gradle Build
 
 on:
-  push:
+  pull_request:
     branches: [ "main" ]
 
 permissions:
@@ -26,7 +26,7 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
-          cache: gradle
+          cache: gradle_pr
       - name: Get secret
         env:
           JSON: ${{ secrets.JSON_PASS }}
