--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,7 +66,7 @@ android {
 afterEvaluate {
     lintVitalRelease.dependsOn('lintKotlin')
     lint.dependsOn('lintKotlin')
-    assembleDebug.dependsOn('formatKotlin').dependsOn('lint')
+    assembleDebug.dependsOn('formatKotlin').dependsOn('lintKotlin')
     bundleRelease.dependsOn('lintVitalRelease')
 }
 
