--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -31,9 +31,10 @@ jobs:
           distribution: 'temurin'
 
       - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
+        uses: gradle/gradle-build-action@v2.8.0
         with:
           cache-read-only: ${{ github.ref != 'refs/heads/main' }}
+          cache-overwrite-existing: true
 
       - name: Get secret
         env:
